--- a/Water_Environment/Views/Login/Index.cshtml
+++ b/Water_Environment/Views/Login/Index.cshtml
@@ -73,7 +73,7 @@
         @* ========================================================== *@
         <button type="button" class="login__button" id="loginB" onclick="LoginForm()">Đăng nhập</button>
         @Html.ValidationSummary(false, "", new { @class = "text-danger " })
-        <button type="button" class="login__button" id="registerB" onclick="RegisterForm()">Register</button>
+        <button type="button" class="login__button" id="registerB" onclick="RegisterForm()">Đăng kí</button>
         @* =========================================================== *@
 
 
