--- a/Water_Environment/Views/Shared/_LayoutAdmin.cshtml
+++ b/Water_Environment/Views/Shared/_LayoutAdmin.cshtml
@@ -12,7 +12,8 @@
     <link href="~/AdminAssets/css/sb-admin-2.min.css" rel="stylesheet">
     <script src="~/AdminAssets/js/sb-admin-2.min.js"></script>
     <link href="~/Content/PagedList.css" rel="stylesheet" />
-
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body id="page-top">
     <div id="wrapper">
@@ -57,14 +58,14 @@
             </div>
 
             <li class="nav-item">
-                <a class="nav-link" href="/Admin/CategoryProduct">
+                <a class="nav-link" href="/Admin/ManageCategories">
                     <i class="fas fa-list"></i>
                     <span>Loại bài viết</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/Admin/ProductInfo">
+                <a class="nav-link" href="/Admin/ManageActivitiesNews">
                     <i class="fas fa-list"></i>
                     <span>Danh sách bài viết</span>
                 </a>
@@ -164,7 +165,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright © dienthoaigiavon.com</span>
+                        <span>Copyright © NTMT.com</span>
                     </div>
                 </div>
             </footer>
