--- a/Water_Environment/Views/Admin/ManageCategories.cshtml
+++ b/Water_Environment/Views/Admin/ManageCategories.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Water_Environment.Models.Permission>
+﻿@model IEnumerable<Water_Environment.Models.Category>
 
 @{
     ViewBag.Title = "ManagePermission";
@@ -8,7 +8,7 @@
 <h2>Danh sách quyền</h2>
 
 <div class="text-right">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Thêm Quyền" data-bs-target="#ModalEdit">Thêm quyền</button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Thêm Loại" data-bs-target="#ModalEdit">Thêm loại</button>
 </div>
 <div class="card-body">
     <div class="table-responsive">
@@ -16,9 +16,9 @@
             <thead>
                 <tr>
                     <th scope="col">STT</th>
-                    <th scope="col">Tên quyền</th>
-                    <th scope="col">Mã quyền</th>
+                    <th scope="col">Tên loại</th>
                     <th scope="col">Kích hoạt</th>
+                    <th scope="col">Cập nhật lần cuối</th>
                     <th></th>
                 </tr>
             </thead>
@@ -28,13 +28,13 @@
                     <tr>
                         <td>@item.id</td>
                         <td>@item.Name</td>
-                        <td>@item.Code</td>
                         <td> <input class="form-check-input" type="checkbox" checked="@item.IsActive" disabled></td>
+                        <td>@item.CreatedOn</td>
                         <th>
                             <div class="btn-group" role="group">
                                 @*<i class="fas fa-edit"></i>*@
                                 @*<button type="button" class="btn btn-primary" onclick="EditUser(@item.id)">Sửa</button>*@
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Sửa Quyền" data-bs-target="#ModalEdit" data-permission-id="@item.id" data-permission-name="@item.Name" data-permission-code="@item.Code" data-permission-active="@item.IsActive">Sửa</button>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Sửa Loại" data-bs-target="#ModalEdit" data-category-id="@item.id" data-category-name="@item.Name" data-category-active="@item.IsActive">Sửa</button>
                             </div>
                         </th>
                     </tr>
@@ -51,20 +51,16 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3 d-none">
-                                <label for="permission-id" class="col-form-label">ID:</label>
-                                <input type="text" class="form-control" id="permission-id">
+                                <label for="category-id" class="col-form-label">ID:</label>
+                                <input type="text" class="form-control" id="category-id">
                             </div>
                             <div class="mb-3">
-                                <label for="permission-name" class="col-form-label">Tên quyền:</label>
-                                <input type="text" class="form-control" id="permission-name">
-                            </div>
+                                <label for="category-name" class="col-form-label">Tên loại:</label>
+                                <input type="text" class="form-control" id="category-name">
+                            </div> 
                             <div class="mb-3">
-                                <label for="permission-code" class="col-form-label">Mã quyền:</label>
-                                <input class="form-control" id="permission-code"></input>
-                            </div>
-                            <div class="mb-3">
-                                <label for="permission-active" class="col-form-label">Kích hoạt:</label>
-                                <input class="form-control-input" type="checkbox" id="permission-active" checked>
+                                <label for="category-active" class="col-form-label">Kích hoạt:</label>
+                                <input class="form-control-input" type="checkbox" id="category-active" checked>
                             </div>
                         </form>
                     </div>
@@ -82,45 +78,41 @@
     modalEdit.addEventListener('show.bs.modal', function (event) {
         // Button that triggered the modal
         var button = event.relatedTarget;
-        var modalActiveValue = modalEdit.querySelector('#permission-active')
+        var modalActiveValue = modalEdit.querySelector('#category-active')
         var modalTitle = modalEdit.querySelector('.modal-title');
         var titleModal = button.getAttribute('title');
         modalTitle.textContent = titleModal;
         modalActiveValue.disabled = false;
         console.log("titleModal", titleModal);
-        if (titleModal == "Thêm Quyền") {
+        if (titleModal == "Thêm Loại") {
             modalActiveValue.disabled = true;
         }
         else {
             // Extract info from data-bs-* attributes
-            var id = button.getAttribute('data-permission-id')
-            var name = button.getAttribute('data-permission-name')
-            var code = button.getAttribute('data-permission-code')
-            var isActive = button.getAttribute('data-permission-active')
-            var modalIdValue = modalEdit.querySelector('#permission-id')
-            var modalNameValue = modalEdit.querySelector('#permission-name')
-            var modalCodeValue = modalEdit.querySelector('#permission-code')
+            var id = button.getAttribute('data-category-id')
+            var name = button.getAttribute('data-category-name')
+            var isActive = button.getAttribute('data-category-active')
+            var modalIdValue = modalEdit.querySelector('#category-id')
+            var modalNameValue = modalEdit.querySelector('#category-name')
             modalIdValue.value = id;
             modalNameValue.value = name;
-            modalCodeValue.value = code;
             modalActiveValue.checked = (isActive == "True");
         }
     })
 
     function SaveInfo() {
         var modalTitle = document.getElementById('ModelTitle').innerHTML;
-        var id = $("#permission-id").val();
-        var name = $("#permission-name").val();
-        var code = $("#permission-code").val();
-        var isActive = $("#permission-active").val();
-       
+        var id = $("#category-id").val();
+        var name = $("#category-name").val();
+        var isActive = $("#category-active").val();
+
         if (name == '' || code == '') {
             alert('Vui lòng nhập đủ thông tin');
             return;
         }
-        if (modalTitle == "Thêm Quyền") {
+        if (modalTitle == "Thêm Loại") {
             $.ajax({
-                url: '/Admin/AddPermission',
+                url: '/Admin/AddCategory',
                 type: 'POST',
                 dataType: 'text',
                 data: {
@@ -143,12 +135,11 @@
         }
         else {
             $.ajax({
-                url: '/Admin/EditPermission',
+                url: '/Admin/EditCategory',
                 type: 'POST',
                 dataType: 'text',
                 data: {
                     id: id,
-                    Code: code,
                     Name: name,
                     IsActive: isActive === "on"
                 }
