--- a/Water_Environment/Views/Admin/ManageActivitiesNews.cshtml
+++ b/Water_Environment/Views/Admin/ManageActivitiesNews.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Danh sách quyền</h2>
+<h2>Danh sách bài viết</h2>
 
 <div class="text-right">
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Thêm Loại" data-bs-target="#ModalEdit">Thêm loại</button>
