--- a/Water_Environment/Views/Home/Index.cshtml
+++ b/Water_Environment/Views/Home/Index.cshtml
@@ -2,80 +2,9 @@
 
 @{
     ViewBag.Title = "Home";
-    Layout = "~/Views/_MasterLayout.cshtml";
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
-
-<div>
-    @* Header *@
-    <div class="header">
-        <div class="head-left">
-            <div class="head-left-email">
-                <a href="mailto:info@educationpro.com">
-                    <i class='bx bx-envelope bx-tada'></i> nhom12@gmail.com
-                </a>
-            </div>
-            <div class="head-left-phone">
-                <a href="tel:+9779813639131">
-                    <i class='bx bxs-phone bx-tada'></i> 0818202648
-                </a>
-            </div>
-        </div>
-
-        <div class="box">
-            <input type="text" placeholder="Search...">
-            <a><i class='bx bx-search-alt-2 bx-tada'></i></a>
-        </div>
-
-        <div class="head-right">
-            <div class="login-block">
-                <a href="~/Login"><i class='bx bx-user-circle'></i></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="main-header" id="myHeader">
-        <div class="container">
-            <div class="logo-wrap">
-                <img src="~/Images/logo_home.png" alt="Logo Image" />
-            </div>
-            <div class="nav-wrap">
-                <nav class="nav-desktop">
-                    <ul class="menu-list">
-                        <li><a href="~/Home/Home">Trang chủ</a></li>
-                        <li class="menu-parent">
-                            Giới thiệu
-                            <ul class="sub-menu">
-                                <li><a href="#">Tổng quát</a></li>
-                                <li><a href="#">Thông tin nhóm</a></li>
-                            </ul>
-                        </li>
-                        @{
-                            foreach (var item in Model)
-                            {
-                                <li class="menu-parent">
-                                    @item.CateName
-                                    <ul class="sub-menu">
-                                        @foreach (var itemContent in @item.CateContent)
-                                        {
-                                            <li><a href="@itemContent.url">@itemContent.Title</a></li>
-                                        }
-                                    </ul>
-                                </li>
-                            }
-                        }
-                        <li><a href="">Tham gia</a></li>
-                        <li><a href="">Liên hệ</a></li>
-                    </ul>
-                </nav>
-                <div id="bar">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <div id="close">
-                    <i class="fas fa-times"></i>
-                </div>
-            </div>
-        </div>
-    </div>
+ 
 
     @* Body *@
     <div class="banner">
@@ -182,96 +111,4 @@
 
     </div>
      
-    @* Footer *@
-    <div class="footer">
-        <div class="top-footer">
-            <div class="space"></div>
-            <div class="left-head-ft" style="padding-bottom: 30px;">
-                <h3>
-                    <b>
-                        Contact
-                    </b>
-                </h3>
-                <hr style="height: 3px; width: 120px;" />
-                <p style="font-size: 15px;">
-                    Hãy hành động để đưa ra những giải pháp thực tế để
-                    giảm thiểu tình trạng ô nhiễm môi trường nước
-                </p>
-                <hr class="foot-hr" />
-                <a href="mailto:info@educationpro.com">
-                    <i class="fas fa-envelope"></i> nhom12@gmail.com
-                </a>
-                <hr class="foot-hr" />
-                <a href="tel:+9779813639131">
-                    <i class="fas fa-phone"></i> 0818202648
-                </a>
-                <hr class="foot-hr" />
-                <a href="tel:+9779813639131">
-                    <i class='bx bxs-location-plus'></i>
-                    828 Đ. Sư Vạn Hạnh, Phường 12, Quận 10, Thành phố Hồ Chí Minh
-                </a>
-            </div>
-            <div class="space"></div>
-
-            <div class="right-head-ft">
-                <h3>
-                    <b>
-                        Feedback
-                    </b>
-                </h3>
-                <hr style="height: 3px; width: 120px;" />
-                <input type="text" name="name" value="" placeholder="Your email*" />
-                <textarea placeholder="write you feedback*"></textarea>
-                <button class="btn">Send</button>
-            </div>
-        </div>
-
-        <div class="mid-footer" style="padding-top: 20px;">
-            <div class="mid-footer-item">
-                <hr class="foot-hr" />
-            </div>
-            <div class="mid-footer-item icon">
-                <a href=""><i class="fab fa-facebook-square"></i></a>
-                <a href=""><i class="fab fa-twitter"></i></a>
-                <a href=""><i class="fab fa-youtube"></i></a>
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class='bx bxl-tiktok'></i></a>
-                <a href=""><i class='bx bxl-telegram'></i></a>
-            </div>
-            <div class="mid-footer-item">
-                <hr class="foot-hr" />
-            </div>
-        </div>
-
-        <div class="bottom-footer" style="padding-top: 30px;">
-            <p style="font-size: 13px;">
-                Copyright 2023&emsp;&emsp;|&emsp;&emsp;&emsp;Hãy cùng nhau bảo vệ nguồn nước.
-            </p>
-        </div>
-    </div>
-</div>
-
-<!------------------------------------------- Back to Top ----------------------------------------->
-<button onclick="topFunction()" id="myBtn" title="Go to top">
-    <i class='bx bxs-arrow-to-top'></i>
-</button>
-
-<script>
-    let mybutton = document.getElementById("myBtn");
-
-    window.onscroll = function () { scrollFunction() };
-
-    function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            mybutton.style.display = "block";
-        } else {
-            mybutton.style.display = "none";
-        }
-    }
-
-    function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    }
-</script>
-@* ------------------------------------------------------------------------------------------------- *@
+   
